<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phne"/>

    <TextView
        android:id="@+id/phneNumber_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lname"/>

    <TextView
        android:id="@+id/lname_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/show_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_detail"/>



            <LinearLayout android:id="@+id/detail_view"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fname"/>

                <TextView
                android:id="@+id/fname_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

                <TextView
                    android:id="@+id/email_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Address"/>

                <TextView
                    android:id="@+id/address_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"/>

               <Button
                   android:id="@+id/return_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/new_contact"/>

            </LinearLayout>

    </LinearLayout>

</ScrollView>